<resources>
    <string name="app_name">POC</string>
    <string name="facebook_app_id">246647122417012</string>
    <string name="twitter_key">MM22GOK2Jn6UI6UTyqZdgfY7u</string>
    <string name="twitter_secret_key">oD1dZ6Tpw59V5zzxZWYKYRbWYYThCpRcj4MVZYsb9ffJUPxN6T</string>
    <string name="twitter_callback_url">http://poc.android.app</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="tweet_text_here">Tweet Text Here</string>
    <string name="user_name">User Name</string>
    <string name="share_with_twitter">Share with Twitter</string>
    <string name="log_in_with_twitter">Log In with Twitter</string>
    <string name="show_pref">Show Preferences</string>
    <string name="edit_pref">Edit Pref</string>
    <string name="form_pref">Form Pref</string>
    <string name="dependent_pref">Dependent Pref</string>
    <string name="pref_listener">Pref Listener</string>
    <string name="list_pref">List Pref</string>
    <string name="pref_header">Header Pref</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="changes_in_file">Changes in file</string>
    <string name="save_values">Save Values</string>
    <string name="shift_activity">Shift Activity</string>
    <string name="log_out_from_twitter">Log Out</string>

    <string-array name="city_names">
        <item>New York</item>
        <item>London</item>
        <item>Washington</item>
        <item>Mumbai</item>
    </string-array>
    <string-array name="city_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aquery_with_json">AQuery with JSON</string>
    <string name="load_data">Load Data</string>
    <string name="please_wait">Please wait...</string>
    <string name="lading_data">Loading data...</string>
    <string name="google_key">AIzaSyAhaD4HwgofkA2_9Z7fLbGB1V8Shi-S7do</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_content_to_upload">Enter data to Upload</string>
    <string name="select_image">Select Image from Gallary</string>
    <string name="finding_location">Finding Location</string>

    <string name="gcm_project_key">664628621711</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
</resources>
