<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.synerzip.poc.PrefActivity">

    <TextView
        android:id="@+id/text_pref_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_show_pref_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Pref Screen" />

    <Button
        android:id="@+id/button_show_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_pref" />

    <Button
        android:id="@+id/button_edit_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_pref" />

    <Button
        android:id="@+id/button_form_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_pref" />

    <Button
        android:id="@+id/button_dependent_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependent_pref" />

    <Button
        android:id="@+id/button_pref_listenr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_listener" />
    <Button
        android:id="@+id/button_list_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_pref" />

    <Button
        android:id="@+id/button_header_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_header" />

</LinearLayout>
