<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.synerzip.poc.PrefListenerActivity">
    <EditText
        android:id="@+id/edit_pref_ltner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"/>
    <EditText
        android:id="@+id/edit_pref_ltner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"/>
    <TextView
        android:id="@+id/txt_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_save_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_values"/>
    <Button
        android:id="@+id/button_shift_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shift_activity"/>

</LinearLayout>
