<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.synerzip.poc.TwitterActivity">
    <EditText
        android:id="@+id/edit_tweet_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tweet_text_here"/>
    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_tweet_content"
        android:hint="@string/user_name"/>
    <Button
        android:id="@+id/button_share_with_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_name"
        android:text="@string/share_with_twitter"/>

    <Button
        android:id="@+id/button_log_in_with_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_twitter"
        android:layout_below="@id/button_share_with_twitter"/>

</RelativeLayout>
