<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_json"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.synerzip.poc.JsonActivity">
    <Button
        android:id="@+id/btn_get_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_data"/>

    <Button
        android:id="@+id/btn_upload_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_data"/>
    <EditText
        android:id="@+id/edt_upload_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_content_to_upload"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
